tests/paczka1/small_fuzzy/91074840.err
Error in line 1: IBuNtJC1XYb A8h1 4h,h
Error in line 4: mNSAVX S257 57,2
Error in line 7: pW7eYPGA S852 49,6
Error in line 16: pW7eYPGA S852 ¤3,¤
